--- a/Csssheet.css
+++ b/Csssheet.css
@@ -142,6 +142,45 @@ html {
  .alignment {
    align-items: left;
  }
+.container {
+  position: relative;
+ 
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 200px;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  height: 400px;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #04AA6D;
+  color: white;
+  font-size: 20px;
+  
+}
  
 
   
