--- a/Csssheet.css
+++ b/Csssheet.css
@@ -3,6 +3,10 @@
         padding: 0;
         margin: 0;
     }
+html{
+  
+  background-image: url(images/imageBg.jpg);
+}
   
    
 
@@ -107,10 +111,7 @@ img {
       overflow: hidden;
       text-align: center;
 }
-html {
-   background-image: url (images/imagebg.jpg);
 
- }
 
  form,
  #submit {
